--- a/public/index.html
+++ b/public/index.html
@@ -14,19 +14,19 @@
 			<span onclick="despliegueMenuHeader('')" id="desplegableHeader" class="flex flex-col items-center justify-center w-full ">
 			<img src="./multimedia/navlist.png" alt="img" class="w-8 mb-2" id="nav__list" >
 			</span>
-			<ul class="hidden flex-col justify-center items-center w-full text-teal-50 font-medium shadow-inner" id="menuHeader">
-				<li class="m-1">
-					<a href="./index.html" class="desplegable_menu--item--per dM--item--h--inicio">Inicio</a>
+			<ul class="hidden flex-col justify-center items-center w-full bg-slate-900 text-teal-50 font-medium translate-y-3 shadpe  shadow-[0px_10px_12px_0px_rgba(0,0,0,0.75)_inset]" id="menuHeader">
+				<li class="m-1 mt-6">
+					<a href="./index.html" class="text-white hover:text-cyan-500 hover:text-lg">Inicio</a>
 				</li>
 				<li class="m-1">
-					<a href="./portafolio.html" class="desplegable_menu--item--hiper">Portafolio</a>
+					<a href="./portafolio.html" class="text-white hover:text-cyan-500 hover:text-lg">Portafolio</a>
 				</li>
 				<li class="m-1">
-					<a href="./multimedia.html" class="desplegable_menu--item--hiper">Multimedia</a>
+					<a href="./multimedia.html" class="text-white hover:text-cyan-500 hover:text-lg">Multimedia</a>
 				</li>
 				<li class="m-1">
 					<a href="./contact.html" class="">
-						<button class="flex items-center h-8 px-3 py-2 bg-cyan-500 font-semibold text-color-secundary rounded-lg">Contactame</button>
+						<button class="flex items-center h-8 px-3 py-2 mb-3 bg-cyan-500 font-semibold text-color-secundary rounded-lg hover:text-lg hover:text-white" >Contactame</button>
 					</a>
 				</li>
 			</ul>
@@ -55,7 +55,7 @@
         <section class="flex flex-col shadow-[-1px_0px_14px_1px_rgba(0,0,0,0.75)]">
             <h2 class="text-cyan-300 text-2xl font-medium mx-3 mt-9">Los atributos que me caracterizan </h2>
         	<div class="flex flex-wrap w-full justify-center my-6">
-            	<div class="flex flex-col items-center m-5 ">
+            	<div class="flex flex-col items-center m-5 w-28 text-center">
                 	<img src="./multimedia/html5.png" class="w-16">
                 	<p class="text-xl text-cyan-100 font-semibold ">Html 5
                 	</p>
@@ -63,7 +63,7 @@
                 	tempor incididunt ut labore et dolorbe magna aliqua.
                		</p>
             	</div>
-				<div class="flex flex-col items-center m-5">
+				<div class="flex flex-col items-center m-5 w-28 text-center">
                 	<img src="./multimedia/css3.png" class="w-16">
                 	<p class="text-xl  text-cyan-100 font-semibold">Css 3 
                 	</p>
@@ -71,7 +71,7 @@
                 	tempor incididunt ut labore et dolore magna aliqua.
                		</p>
             	</div>
-				<div class="flex flex-col items-center m-5">
+				<div class="flex flex-col items-center m-5 w-28 text-center">
                 	<img src="./multimedia/Javascript.png" class="w-16">
                 	<p class="text-xl  text-cyan-100 font-semibold">JavaScript 
                 	</p>
@@ -79,7 +79,7 @@
                 	tempor incididunt ut labore et dolore magna aliqua.
                		</p>
             	</div>				
-				<div class="flex flex-col items-center m-5">
+				<div class="flex flex-col items-center m-5 w-28 text-center">
                 	<img src="./multimedia/python.png" class="w-16">
                 	<p class="text-xl  text-cyan-100 font-semibold">Python 
                 	</p>
@@ -87,7 +87,7 @@
                 	tempor incididunt ut labore et dolore magna aliqua.
                		</p>
             	</div>
-				<div class="flex flex-col items-center m-5">
+				<div class="flex flex-col items-center m-5 w-28 text-center">
                 	<img src="./multimedia/github.png" class="w-16">
                 	<p class="text-xl  text-cyan-100 font-semibold">Git & Github 
                 	</p>
@@ -95,7 +95,7 @@
                 	tempor incididunt ut labore et dolore magna aliqua.
                		</p>
             	</div>
-				<div class="flex flex-col items-center m-5">
+				<div class="flex flex-col items-center m-5 w-28 text-center">
                 	<img src="./multimedia/tailwindLogo.png" class="w-16">
                 	<p class="text-xl  text-cyan-100 font-semibold">Tailwind css
                 	</p>
@@ -140,9 +140,9 @@
 				<div class="flex flex-col justify-center items-center m-3 border-2 border-cyan-500 rounded-lg">
 				<h3 class="text-white font-semibold text-2xl">Contacto</h4>
 				<form class="flex flex-col items-center w-11/12 relative mb-10">
-						<input type="text" name="Nombre" id="nombre_form" placeholder="Nombre" class="w-full h-7 my-3 rounded-lg px-3">
-						<input type="email" name="Email" id="email_form" placeholder="Tu correo electronico" class="w-full h-7 my-3 rounded-lg px-3">
-                        <input type="text" name="Descripcion" id="description_form" placeholder="Descripcion del servicio que estas nesecitando" class="w-full h-28 my-3 rounded-lg px-3">
+						<input type="text" name="Nombre" id="nombre_form" placeholder="Nombre" class="w-full h-10 my-2 rounded-lg px-3 bg-purple-900 border-2 border-slate-900 placeholder:text-white  placeholder:font-medium">
+						<input type="email" name="Email" id="email_form" placeholder="Tu correo electronico" class="w-full h-10 my-2 rounded-lg px-3 bg-purple-900 border-2 border-slate-900 placeholder:text-white placeholder:font-medium">
+                        <input type="text" name="Descripcion" id="description_form" placeholder="Descripcion del servicio que estas nesecitando" class="w-full h-28 my-2 rounded-lg px-3 bg-purple-900 border-2 border-slate-900 placeholder:text-white placeholder:font-medium">
 						<input type="submit" name="submit" id="submit_form" class="w-1/2 h-8 my-3 bg-color-secundary rounded-lg text-white absolute -bottom-16 border-2 border-cyan-500">
 				</form>
 				</div>
@@ -166,7 +166,7 @@
 				</div>
 			</div>
 			</aside>
-			<div class="flex flex-col justify-around items-center bg-color-secundary">
+			<div class="flex flex-col justify-around items-center bg-slate-800 shadow-[-1px_5px_20px_1px_rgba(0,0,0,0.75)]">
 				<div class="w-full my-3 flex flex-row justify-around items-center">
 					<span class="w-12">
 						<img src="./multimedia/logHeader.png" alt="imgagen logo" class="w-full object-cover">
@@ -177,14 +177,14 @@
 					</span>
 				</div>	
                 <div class="hidden flex-wrap items-center justify-center" id="menuFooter" style="display: none">
-					<a href="http://" class="m-3 text-white font-medium">Informacion</a>
-					<a href="http://" class="m-3 text-white font-medium">Documentacion</a>
-					<a href="http://" class="m-3 text-white font-medium">Contacto</a>
-					<a href="http://" class="m-3 text-white font-medium">Multimedia</a>           
+					<a href="http://" class="m-3 text-white font-medium hover:text-cyan-400 ">Informacion</a>
+					<a href="http://" class="m-3 text-white font-medium hover:text-cyan-400 ">Documentacion</a>
+					<a href="http://" class="m-3 text-white font-medium hover:text-cyan-400 ">Contacto</a>
+					<a href="http://" class="m-3 text-white font-medium hover:text-cyan-400 ">Multimedia</a>           
 				</div>
 			</div>
-			<footer>
-				<p>Hecho con amor desde COL</p>
+			<footer class="text-center text-cyan-800 bg-black ">
+				<p>Creado con el ♥</p>
 			</footer>
 			<script src="./js.js"></script>
 		</main>
