nuevos cambios con animaciones

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 		<div class="w-full h-full relative">
 		<nav class="flex flex-col  justify-between w-full items-center my-2">
 			<img src="./multimedia/logHeader.png" alt="img" class="w-10 my-2" >
-			<span onclick="despliegueMenuHeader('')" id="desplegableHeader" class="flex flex-col items-center justify-center w-full ">
+			<span onclick="despliegueMenuHeader('')" id="desplegableHeader" class="flex flex-col items-center justify-center w-full hover:animate-bounce">
 			<img src="./multimedia/navlist.png" alt="img" class="w-8 mb-2" id="nav__list" >
 			</span>
 			<ul class="hidden flex-col justify-center items-center w-full bg-slate-900 text-teal-50 font-medium translate-y-3 shadpe  shadow-[0px_10px_12px_0px_rgba(0,0,0,0.75)_inset]" id="menuHeader">
@@ -147,20 +147,20 @@
 				</form>
 				</div>
 			</section>
-			<aside class="flex flex-col justify-center items-center w-16 h-16 fixed top-56 right-1 rounded-full hover:bg-color-secundary hover:shadow-[-1px_0px_14px_1px_rgba(0,209,255, 0.25)]"  onclick="despliegueMenuAside('')">
+			<aside class="flex flex-col justify-center items-center w-16 h-16 fixed top-56 right-1 rounded-full hover:bg-color-secundary hover:border-2 hover:border-cyan-600"  onclick="despliegueMenuAside('')">
 				<div class="relative flex flex-col justify-center items-center">
 				<img src="./multimedia/logheader.png" alt="foto BD" class="w-14">
 				<div class="hidden flex-col items-center absolute top-14 rounded-full" id="menuAside">
-					<a href="https://www.facebook.com/daniel.florez.37669" target="_blank">
-						<img src="./multimedia/facebooklogo.png" alt="facebook" class="desplegableContact--img dC__img--facebook">
+					<a href="https://www.facebook.com/daniel.florez.37669" target="_blank" class="flex justify-center rounded-full hover:border-2 hover:border-cyan-500">
+						<img src="./multimedia/facebooklogo.png" alt="facebook" class="">
 					</a>
-					<a href="https://twitter.com/DanielFlorezVa1" target="_blank">
+					<a href="https://twitter.com/DanielFlorezVa1" target="_blank" class="flex justify-center rounded-full hover:border-2 hover:border-cyan-500">
 						<img src="./multimedia/twitterlogo.png" alt="twitter" class="desplegableContact--img dC__img--facebook">
 					</a>
-					<a href="https://github.com/xXForeXx" target="_blank">	
+					<a href="https://github.com/xXForeXx" target="_blank" class="flex justify-center rounded-full hover:border-2 hover:border-cyan-500">	
 					<img src="./multimedia/githublogo.png" alt="github" class="desplegableContact--img dC__img--facebook">
 					</a>
-					<a href="https://www.linkedin.com/in/daniel-florez-valencia-31a854224/" target="_blank">
+					<a href="https://www.linkedin.com/in/daniel-florez-valencia-31a854224/" target="_blank" class="flex justify-center rounded-full hover:border-2 hover:border-cyan-500">
 					<img src="./multimedia/linkedinlogo.png" alt="linkenid" class="desplegableContact--img dC__img--facebook">            
 					</a>
 				</div>
